@@ -1,8 +1,8 @@
 package com.pro.gateway.config;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -10,37 +10,53 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import com.pro.gateway.models.User;
 
-import reactor.core.publisher.Mono;
-
 public class UserPrinciple implements UserDetails {
 	
 	private static final long serialVersionUID = 1L;
-	private  Mono<User> user;
+	private User user;
 	
-	public UserPrinciple(Mono<User> user2) {
+	public UserPrinciple(User user2) {
 		this.user=user2;	}
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		GrantedAuthority authority=new SimpleGrantedAuthority("ROLE_USER");
-		return List.of(authority);
-		
+	return	Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
 	}
 
 	@Override
 	public String getPassword() {
-		
-		return "{bcrypt}"+user.map(obj->{
-			return obj.getPassword();
-	}).toString();
+		return "{bcrypt}"+user.getPassword();
+//		return user.map(obj->{
+//			return obj.getPassword();
+//	}).toString();
 	}
 
 	@Override
 	public String getUsername() {
-		
-	 return user.map(obj->{
-			return obj.getUsername();
-		}).toString();
+		return user.getUsername();
+//	 return user.map(obj->{
+//			return obj.getUsername();
+//		}).toString();
 	}
+	
+	  @Override
+	    public boolean isAccountNonExpired() {
+	        return true;
+	    }
+
+	    @Override
+	    public boolean isAccountNonLocked() {
+	        return true;
+	    }
+
+	    @Override
+	    public boolean isCredentialsNonExpired() {
+	        return true;
+	    }
+
+	    @Override
+	    public boolean isEnabled() {
+	        return true;
+	    }
 
 }
